Lógica para poder trocar de clientes